2010-08-16 :	mkfs <mkfs@thoughtgang.org>
	*	Added configure option to disable CLI build (for OS X users)
2010-04-19 :    mkfs <mkfs@thoughtgang.org>
	*	Added bootstrap script to distribution
2010-03-10 :	mkfs <mkfs@thoughtgang.org>
	* 	1.0 Release