@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.59])
-AC_INIT([opdis], [1.0.6], [community@thoughtgang.org])
+AC_INIT([opdis], [1.1.0], [community@thoughtgang.org])
 AM_INIT_AUTOMAKE([1.9 gnu subdir-objects])
 
 AC_CONFIG_MACRO_DIR([m4])
